# RAGprodapp

./: .gitignore  README.md  custom_types.py  data_loader.py  main.py  pyproject.toml  requirements.txt  vector_db.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/0864036b-e8f3-4570-a57b-06dcc999c58a/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/51d94a9a-46ed-4a2d-ac59-15c9ef23b5b9/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/9e5d69ed-0c69-4876-9187-47e0847dac02/: mutable_id_tracker.mappings
